// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`code > Empty code with backquote 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "raw": "\`\`",
        "text": "",
        "type": "code",
      },
    ],
    "type": "line",
  },
]
`;

exports[`code > Simple code with backquote 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "raw": "\`Simple code\`",
        "text": "Simple code",
        "type": "code",
      },
    ],
    "type": "line",
  },
]
`;
